[package]
name = "tokiotest-httpserver"
version = "0.1.0"
authors = ["Bruno Thomas <bthomas@iroco.fr>"]
license = "Apache-2.0"
description = "A simple http server to make unit/integration tests"
repository = "https://github.com/iroco-co/tokiotest-httpserver"
keywords = ["http", "tokio"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tower-http = "0.2"
tokio-test = "0.4.2"
test-context = "0.1.3"
lazy_static = "1.4"
queues = "1.1"

[dev-dependencies]
serial_test = "*"